--- a/translations/deckbuilding.tex/es.po
+++ b/translations/deckbuilding.tex/es.po
@@ -333,8 +333,8 @@ msgid ""
 "cards, the power dissipates."
 msgstr ""
 "Las Cartas de Hechizos\\index{Cartas de Hechizos} tiene 3 posibles efectos "
-"principales.  Utilizar el Hechizo en su versión básica no tiene coste adicional. "
-"Para acceder a los demás efectos, puedes \\textbf{Potenciar} un "
+"principales.  Utilizar el Hechizo en su versión básica no tiene coste "
+"adicional. Para acceder a los demás efectos, puedes \\textbf{Potenciar} un "
 "Hechizo\\index{Potenciando Hechizos} pagando el coste indicado (3) para un "
 "resultado más potente (4).  Puedes pagar este coste jugando otras cartas por "
 "su efecto de Poder \\svg{empower} (ej. el Poder de Hechizo de Estadísitca) "
